--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <h1>Guessing Game</h1>
         <p> Guess a number between 1 and 100</p>
         <input type="number" id="guess">
-        <button onclick="checkGuess()"> Submit guess</button>
+        <button onclick="checkGuess()"> Submit Guess</button>
         <p id="feedback"> </p>
     </div>
     <script src="assets/script.js"></script>
